--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "motion": "^12.23.26",
     "next": "16.0.10",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "vercel": "^50.1.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
