--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vercel": "^50.1.2"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.15.3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
