--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "framer-motion": "^12.23.26",
     "gsap": "^3.14.2",
     "lucide-react": "^0.561.0",
-    "motion": "^12.23.26",
+    "motion": "^12.34.1",
     "next": "16.0.10",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "resend": "^6.9.1",
     "vercel": "^50.1.2",
-    "zod": "^3.25.76",
-    "resend": "^6.9.1"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^5.15.3",
